# struq_dpo

./: .gitignore  AGENTS.md  config.yaml  default_config.yaml  gpt_moe_layer.py  load_fused.py  load_fused_peft.py  main.py  pyproject.toml  sky_dpo.yaml  sky_dpo_4.yaml  sky_dpo_8.yaml  train_dpo.py
conf/: config.yaml
conf/experiment/: gpt_oss_20b_tools.yaml  gpt_oss_20b_tools_local.yaml  llama3_8b.yaml  llama3_8b_dxml.yaml  phi_4_4b.yaml  qwen3_0.6b_tools.yaml  qwen3_1.7b_tools.yaml  qwen3_14b.yaml  qwen3_14b_tools.yaml  qwen3_32b_tools.yaml  qwen3_4b_fr.yaml  qwen3_4b_ro.yaml  qwen3_4b_tools.yaml  qwen3_8b_tools.yaml
experiments/dsr1ld_8b/: config.yaml
experiments/qwen3_4b/: config.yaml
experiments/qwen3_8b/: config.yaml
