[project]
name = "struq-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "hydra-core>=1.3.2",
    "peft>=0.17.1",
    "torch",
    "transformers>=4.56.0",
    "trl>=0.22.2",
    "wandb>=0.21.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
gpu = ["liger-kernel", "flash-attn"]
